--- a/views/list.ejs
+++ b/views/list.ejs
@@ -16,62 +16,70 @@
         <title>ToDo : List</title>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">ToDo App</a>
-                <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#navbarNav"
-                    aria-controls="navbarNav"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation"
-                >
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a
-                                class="nav-link active"
-                                aria-current="page"
-                                href="#"
-                                >Home</a
-                            >
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Features</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        <%- include('nav.ejs') %>
 
-        <h4>This is List</h4>
+        <h4 class="mt-4 text-center">
+            <strong>List</strong>
+        </h4>
 
-        <% for(var i = 0; i < posts.length; i++){ %>
-        <h4>할 일 제목 : <%= posts[i].이름 %> <h4>
-        <p>할 일 마감날짜 : <%= posts[i].나이 %></p>
-        <% } %>
+        
+        <div class="container">
 
-        <!-- <h4>할 일 제목 : <%= posts[1].이름 %> <h4>
-        <p>할 일 마감날짜 : <%= posts[1].나이 %></p> -->
+            <ul class="list-group list-group-flush">
+                <% for(var i = 0; i < posts.length; i++){ %>
+                <li class="list-group-item" >
+                    <p>num : <%= posts[i]._id %>  </p>
+                   <a href="/detail/<%= posts[i]._id %>"  style="text-decoration: none">
+                       <h4>할 일 제목 : <%= posts[i].title %> <h4>
+                   </a> 
+                        <p>할 일 마감날짜 : <%= posts[i].date %></p>
+                        <button class="btn btn-danger delete" data-id="<%= posts[i]._id %>">삭제</button>
+                        <a href="/edit/<%= posts[i]._id  %> ">
+                            <button class="btn btn-primary" data-id="<%= posts[i]._id %>" >수정</button>
+                        </a>
+                </li>
+                <% } %>  
+            </ul>
+            
+        </div>
 
-        <!-- Optional JavaScript; choose one of the two! -->
-        <!-- Option 1: Bootstrap Bundle with Popper -->
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-            crossorigin="anonymous"
-        ></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <script>
+            
+            $('.delete').click(function(e){
+            $.ajax({
+                method: 'DELETE',
+                url: '/delete',
+                data: { _id: e.target.dataset.id }
+            }).done(()=>{
+                console.log('삭제완료!');
+                $(e.target).parents('li').fadeOut();
+            })
+        });
+  
+  
+            
+        </script>
 
-        <!-- Option 2: Separate Popper and Bootstrap JS -->
-        <!--
+        
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    --></body>
+    -->   
+    
+    <!-- <% for(var i = 0; i < posts.length; i++){ %> -->
+        <!-- <h4>할 일 제목 : <%= posts[i].title %> <h4> -->
+        <!-- <p>할 일 마감날짜 : <%= posts[i].date %></p> -->
+        <!-- <button>삭제</button> -->
+        <!-- <% } %> -->
+</body>
 </html>
