--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -13,30 +13,14 @@
             crossorigin="anonymous"
         />
 
-        <title>ToDo : Write</title>
+        <title>ToDo : MyPage</title>
     </head>
     <body>
         <%- include('nav.ejs') %>
 
         <h4 class="mt-4 text-center">
-            <strong>Write</strong>
+            <strong><%= 사용자.id %> MyPage</strong>
         </h4>
-
-        <div class="container">
-            <form action="/add" method="POST">
-                <div class="form-group">
-                    <label>오늘의 할일</label>
-                    <input type="text" class="form-control" name="title" />
-                </div>
-                <div class="form-group">
-                    <label>날짜</label>
-                    <input type="text" class="form-control" name="date" />
-                </div>
-                <button type="submit" class="btn btn-danger mt-4">
-                    Submit
-                </button>
-            </form>
-        </div>
 
         <!-- Optional JavaScript; choose one of the two! -->
         <!-- Option 1: Bootstrap Bundle with Popper -->
